70-k8s-ingress/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-service
  labels:
    app: fastapi
spec:
  type: ClusterIP
  selector:
   app: fastapi
  ports:
    - name: http
      port: 80
      targetPort: 8000
